# pngdiff

./: CMakeLists.txt  main.cpp
include/: mmpl.hpp  pngdiff.hpp
src/: pndiff.cpp
